# sinkhole-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: CODE_OF_CONDUCT.md
benchmarks/: Cargo.toml
benchmarks/benches/: elgamal.rs
benchmarks/results/elgamal-0.0.1/: README.md
benchmarks/results/elgamal-0.0.1/Generate key pair/base/: estimates.json  raw.csv  tukey.json
benchmarks/results/elgamal-0.0.1/Generate key pair/change/: estimates.json
benchmarks/results/elgamal-0.0.1/Generate key pair/new/: benchmark.json  sample.json
benchmarks/results/elgamal-0.0.1/Generate key pair/report/: index.html
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_10/base/: benchmark.json  estimates.json  tukey.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_10/change/: estimates.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_10/new/: raw.csv  sample.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_10/report/: index.html
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_15/base/: tukey.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_15/change/: estimates.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_15/new/: benchmark.json  estimates.json  raw.csv  sample.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_15/report/: index.html
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_20/base/: benchmark.json  raw.csv  sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_20/new/: estimates.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_20/report/: index.html
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_5/base/: benchmark.json  raw.csv
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_5/change/: estimates.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_5/new/: estimates.json  sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/db_setup_group/Setup DB size 2_5/report/: index.html
benchmarks/results/elgamal-0.0.1/db_setup_group/report/: index.html
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_10/base/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_10/new/: raw.csv
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_10/report/: index.html
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_15/base/: raw.csv  sample.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_15/new/: benchmark.json  estimates.json  tukey.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_15/report/: index.html
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_20/base/: estimates.json  raw.csv  tukey.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_20/new/: benchmark.json  sample.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_20/report/: index.html
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_5/base/: benchmark.json  sample.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_5/new/: estimates.json  raw.csv  tukey.json
benchmarks/results/elgamal-0.0.1/query_gen_group/Generate query size 2_5/report/: index.html
benchmarks/results/elgamal-0.0.1/query_gen_group/report/: index.html
benchmarks/results/elgamal-0.0.1/report/: index.html
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_10/base/: benchmark.json  estimates.json  raw.csv
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_10/change/: estimates.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_10/new/: sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_10/report/: index.html
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_15/change/: estimates.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_15/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_15/report/: index.html
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_20/base/: estimates.json  tukey.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_20/new/: benchmark.json  raw.csv  sample.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_20/report/: index.html
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_5/base/: raw.csv
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_5/change/: estimates.json
benchmarks/results/elgamal-0.0.1/run_query_group/Run query size 2_5/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/results/elgamal-0.0.1/run_query_group/report/: index.html
benchmarks/src/: lib.rs
sinkhole/: Cargo.toml
sinkhole-core/: Cargo.toml
sinkhole-core/src/: lib.rs  server_elgamal.rs  traits.rs  utils.rs
sinkhole-core/src/elgamal/: mod.rs
sinkhole-core/src/errors/: mod.rs
sinkhole-core/src/server_elgamal/: traits.rs
sinkhole-elgamal/: Cargo.toml  README.md
sinkhole-elgamal/src/: lib.rs
sinkhole-elgamal/src/client/: mod.rs
sinkhole-elgamal/src/storage/: mod.rs
sinkhole-query/: Cargo.toml
sinkhole-query/src/: lib.rs  traits.rs
sinkhole-query/src/elgamal/: mod.rs
sinkhole-query/src/errors/: mod.rs
tests/: Cargo.toml
tests/src/: elgamal_tests.rs  lib.rs
(+4 files in other folders)
