[package]

name = "sinkhole"
version = "0.0.1"
license = "MIT"
authors = [ "Dean Eigenmann <dean@status.im>", "Gonçalo Pestana <g6pestana@gmail.com>" ]
repository = "https://github.com/hashmatter/sinkhole-rs"
readme = "README.md"
description = "Rust implementation of sinkhole PIR"

[lib]
name = "sinkhole"
path = "src/lib.rs"
