[package]

name = "sinkhole-core"
version = "0.0.1"
license = "MIT"
authors = [ "Dean Eigenmann <dean@status.im>", "Gonçalo Pestana <g6pestana@gmail.com>" ]
repository = "https://github.com/hashmatter/sinkhole-rs"
description = """
The core traits and types for the `sinkhole` library.
"""

[badges]
travis-ci = { repository = "hashmatter/sinkhole-rs" }
