[package]

name = "sinkhole-core"
version = "0.0.1"
edition = "2018"
license = "MIT"
authors = [ "Dean Eigenmann <dean@eigenmann.me>", "Gonçalo Pestana <g6pestana@gmail.com>" ]
repository = "https://github.com/hashmatter/sinkhole-rs"
description = """
The core traits and types for the `sinkhole` library.
"""

[badges]
travis-ci = { repository = "hashmatter/sinkhole-rs" }

[dependencies]
curve25519-dalek = { version = "2.0.0", default-features = false, features = ["serde"] }
rand_core = { version = "0.5.1", default-features = false }
elgamal_ristretto = "0.2.3"
hex = "0.4.2"
bincode = "1"

