[package]

name = "sinkhole-elgamal"
version = "0.0.1"
edition = "2018"
license = "MIT"
authors = [ "Dean Eigenmann <dean@eigenmann.me>", "Gonçalo Pestana <g6pestana@gmail.com>" ]
keywords = ["PIR", "private information retreival"]
repository = "https://github.com/hashmatter/sinkhole-rs"
description = """
Rust implementation of sinkhole PIR
"""

[badges]
travis-ci = { repository = "hashmatter/sinkhole-rs" }

[lib]
name = "sinkhole_elgamal"
path = "src/lib.rs"

[dependencies]
sinkhole-core = { path = "../sinkhole-core" }
elgamal_ristretto = "0.2.3"
curve25519-dalek = "2.0.0"
rand_core = "0.5.1"
bincode = "1.2.1"

