[package]

name = "sinkhole-query"
version = "0.0.1"
edition = "2018"
license = "MIT"
authors = [ "Dean Eigenmann <dean@eigenmann.me>", "Gonçalo Pestana <g6pestana@gmail.com>" ]
repository = "https://github.com/hashmatter/sinkhole-rs"
description = """
The query generation and decryption used by the `sinkhole` library.
"""

[badges]
travis-ci = { repository = "hashmatter/sinkhole-rs" }

[dependencies]
sinkhole-core = { path = "../sinkhole-core", version = "0.0.1" }
