[package]
name = "tests"
version = "0.1.0"
authors = ["gpestana <g6pestana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sinkhole-core = { path = "../sinkhole-core" }
sinkhole-query = { path = "../sinkhole-query" }
elgamal_ristretto = "0.2.3"
rand_core = "0.5.1"
curve25519-dalek = "2.0.0"
